# agent-bridge-mcp

./: CLAUDE.md  Cargo.toml  Dockerfile  PLAN.md  compose.yml
skills/agent-bridge-mcp/: SKILL.md
src/: bridge.rs  db.rs  hub.rs  main.rs  models.rs  ws.rs
