[package]
name = "agent-bridge"
version = "0.1.0"
edition = "2024"

[dependencies]
rmcp = { version = "1.1.0", features = ["server", "transport-streamable-http-server", "transport-io"] }
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.33", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = "0.8"
tokio-util = "0.7"
anyhow = "1"
futures = "0.3"
